--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@noble/hashes": "^1.8.0",
     "@noble/post-quantum": "^0.4.1",
     "@zxing/library": "^0.21.3",
+    "axios": "^1.9.0",
     "crypto-hash": "^3.1.0",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.503.0",
